# quant-finance-portfolio

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/common/: CMakeLists.txt  main.cpp  normal_distribution.cpp  normal_distribution.h
cpp/data/: README.md
cpp/include/quant/: american.hpp  asian.hpp  black_scholes.hpp  btcs.hpp  cn.hpp  cn_american.hpp  ftcs.hpp  gbm.hpp  greeks.hpp  heston_american_pde.hpp  heston_calibration.hpp  heston_exotics.hpp  heston_fourier.hpp  heston_mc.hpp  heston_pde.hpp  heston_qe.hpp  implied_volatility.hpp  monte_carlo.hpp  pde.hpp  psor.hpp  qmc.hpp  theta_scheme.hpp  thomas.hpp  trinomial.hpp  variance_reduction.hpp
cpp/src/: american.cpp  asian.cpp  black_scholes.cpp  btcs.cpp  cn.cpp  cn_american.cpp  ftcs.cpp  gbm.cpp  greeks.cpp  heston_american_pde.cpp  heston_calibration.cpp  heston_exotics.cpp  heston_fourier.cpp  heston_mc.cpp  heston_pde.cpp  heston_qe.cpp  implied_volatility.cpp  main.cpp  monte_carlo.cpp  pde.cpp  psor.cpp  qmc.cpp  theta_scheme.cpp  thomas.cpp  trinomial.cpp  variance_reduction.cpp
cpp/tests/: test_american.cpp  test_asian.cpp  test_black_scholes.cpp  test_btcs.cpp  test_cn.cpp  test_cn_american.cpp  test_ftcs.cpp  test_gbm.cpp  test_greeks.cpp  test_heston_american_pde.cpp  test_heston_calibration.cpp  test_heston_exotics.cpp  test_heston_fourier.cpp  test_heston_mc.cpp  test_heston_pde.cpp  test_heston_qe.cpp  test_implied_volatility.cpp  test_monte_carlo.cpp  test_pde.cpp  test_psor.cpp  test_qmc.cpp  test_theta_scheme.cpp  test_thomas.cpp  test_trinomial.cpp  test_variance_reduction.cpp
notebooks/: 01_heston_cross_validation.ipynb  02_variance_reduction_scoreboard.ipynb
python/: benchmark_phase1.py  benchmark_phase2.py  benchmark_phase3.py  benchmark_phase4.py  validate_american.py  validate_black_scholes.py  validate_btcs.py  validate_cn.py  validate_cn_american.py  validate_ftcs.py  validate_greeks.py  validate_greeks_mc.py  validate_heston_calibration.py  validate_heston_exotics.py  validate_heston_fourier.py  validate_heston_mc.py  validate_heston_pde.py  validate_heston_qe.py  validate_implied_volatility.py  validate_mc_asian.py  validate_mc_european_av.py  validate_mc_european_cv.py  validate_mc_european_euler.py  validate_mc_european_exact.py  validate_mc_european_milstein.py  validate_mc_european_qmc.py  validate_pde_grid.py  validate_psor.py  validate_thomas.py  validate_trinomial.py
python/common/: normal_distribution.py
python/quantlib/: american.py  asian.py  black_scholes.py  btcs.py  cn.py  cn_american.py  ftcs.py  gbm.py  greeks.py  heston_american_pde.py  heston_calibration.py  heston_exotics.py  heston_fourier.py  heston_mc.py  heston_pde.py  heston_qe.py  implied_volatility.py  monte_carlo.py  pde.py  psor.py  qmc.py  theta_scheme.py  thomas.py  trinomial.py  variance_reduction.py
python/results/phase1/: greeks_panel.csv  iv_recovery.csv  put_call_parity.csv
python/results/phase2/: euler_milstein_convergence.csv  qmc_vs_mc.csv  vr_scoreboard.csv
python/results/phase3/: convergence.csv  free_boundary.csv  pricing_canonical.csv  pricing_high_vol.csv  pricing_short_T.csv
python/results/phase4/: heston_calibration.csv  heston_cross_validation.csv  heston_exotics.csv  heston_qe_vs_euler.csv  pde_adi_convergence.csv
theory/phase1/: black_scholes.tex  greeks.tex  implied_volatility.tex
theory/phase2/: greeks_mc.tex  lsm_american.tex  mc_asian.tex  mc_european_av.tex  mc_european_cv.tex  mc_european_euler.tex  mc_european_exact.tex  mc_european_milstein.tex  mc_european_qmc.tex  monte_carlo_foundations.tex  qmc_foundations.tex  sde_discretisation.tex  variance_reduction_foundations.tex
theory/phase3/: block0_pde_foundations.tex  block1_ftcs.tex  block2_btcs.tex  block3_crank_nicolson.tex  block4_psor.tex  block5_trinomial.tex
theory/phase4/: block1_heston_theory.tex  block2_heston_fourier.tex  block3_heston_mc_basic.tex  block4_heston_qe.tex  block5_heston_pde.tex  block6_heston_calibration_exotics.tex
